FIX: mobile menu sidebar overflow and animation

--- a/assets/styles/sass/templates/_header.scss
+++ b/assets/styles/sass/templates/_header.scss
@@ -100,7 +100,12 @@ $sidebar-transition-duration: 300ms;
 				position: absolute;
 				width: 100vw;
 				left: 0;
-				transition: left $sidebar-transition-duration;
+				transition: left $sidebar-transition-duration, width $sidebar-transition-duration;
+				overflow: hidden !important; // prevent scrolling
+
+				> * {
+					width: 100vw;
+				}
 
 				#header {
 					z-index: unset;
@@ -152,7 +157,6 @@ $sidebar-transition-duration: 300ms;
 }// breakpoint-down mobile
 
 html.mobile-menu-open {
-	overflow: hidden !important; // prevent scrolling
 
 	body {
 
@@ -162,6 +166,9 @@ html.mobile-menu-open {
 
 		> .site {
 			left: $sidebar-menu-width;
+			overflow: hidden !important; // prevent scrolling
+			width: 100vw - $sidebar-menu-width;
+			height: 100vh;
 
 			#header {
 
